Make generated OpenAPI spec lint clean
